--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,6 +50,7 @@ body{
     background: linear-gradient(-150deg, $Soft-violet, $Soft-blue) no-repeat;
     // height: 100vh;
     padding: 2em;    
+    max-width: 1200px;
 }
 
 h1{
@@ -167,6 +168,25 @@ p{
 ///////////////  MEDIA QUERIES
 
 @media( min-width: 1000px){
+    body{
+        position: relative;
+    }
+
+    .box{
+        position: absolute;
+        top: 40%;
+        left: 11.3%;
+        width: 150px;
+        height: 150px;
+        background: url('../images/illustration-box-desktop.svg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        margin-left: -30px;
+        z-index: 3;
+        }
+    
+
+
     .card{
         width: 45rem;
         height: 32rem;
@@ -175,14 +195,33 @@ p{
         justify-content: space-between;
         padding: 4em 5em 3em 0;
         margin:30px auto;
-        background-position: -12em 16.5em;
+        background-image: url('../images/illustration-woman-online-desktop.svg');
+        background-size: 25rem;
+        background-position: -4em 5em;
         overflow: auto;
+        position: relative;
 
+        &::after{
+            content: '';
+            position: absolute;
+            width: 50%;
+            height: 200px;
+            left: -25px;
+            top: 44%;
+            background: url('../images/bg-pattern-desktop.svg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: 0 -150px;
+            z-index: 2;
+        }
 
         img{
             width: 25rem;
             margin: 0;
             margin-left: -6.5em;
+            visibility: hidden;
+
+            
         }
 
         .card__content{
@@ -200,6 +239,20 @@ p{
                 margin: 0 0 .5em 0;
             }
         }
+    }
+}
+
+@media( min-width: 1200px){
+    .box{
+        position: absolute;
+        top: 40%;
+        left: 16.4%;
+        width: 150px;
+        height: 150px;
+        background: url('../images/illustration-box-desktop.svg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        margin-left: -30px;
     }
 }
 
